メニューを整理、ラベル訂正

--- a/templates/index.html
+++ b/templates/index.html
@@ -371,16 +371,16 @@
             <span class="close" onclick="closeModal()">&times;</span>
             <h3>メニュー</h3>
             <div class="modal-buttons">
-                <button id="showUrlBtn" class="modal-button" onclick="showUrlContent()">🔗 引き継ぎURLを表示</button>
+                <button id="showUrlBtn" class="modal-button" onclick="showUrlContent()">🔗 引き継ぎURLを表示</button><br>
                 <button id="addFeedBtn" class="modal-button" onclick="showAddFeed()">📥 フィードの追加</button>
                 <button id="importOpmlBtn" class="modal-button"
                     onclick="document.getElementById('fileInput').click()">📄 OPML取り込み</button>
-                <button id="exportOpmlBtn" class="modal-button" onclick="exportOpml()">📤 OPMLエクスポート</button>
+                <button id="exportOpmlBtn" class="modal-button" onclick="exportOpml()">📤 OPMLエクスポート</button><br>
                 <button id="favs" class="modal-button" onclick="window.location.href='/favs'">スターしたアイテム</button>
                 <button id="findEntriesBtn" class="modal-button" onclick="window.location.href='/find'">🔍
                     過去のエントリを検索...</button>
                 <button id="githubOpmlBtn" class="modal-button"
-                    onclick="window.open('https://github.com/buzomo/rss-reader')">📤 OPMLエクスポート</button>
+                    onclick="window.open('https://github.com/buzomo/rss-reader')">🐙GitHubで見る</button>
             </div>
             <div id="urlContent" style="display: none;">
                 <h3>引き継ぎURL</h3>
