説明を改善、決め打ちのIDが入っていたのを削除

--- a/templates/index.html
+++ b/templates/index.html
@@ -386,7 +386,7 @@
                 <h3>引き継ぎURL</h3>
                 <a id="shareUrl" target="_blank"></a>
                 <div id="qrcode"></div>
-                <p>このURLをRSSリーダーアプリに登録して、このRSSリーダーを購読できます。</p>
+                <p>ほかの端末・ブラウザで読み取ると購読を引き継げます</p>
             </div>
             <div id="addFeedSection" style="display: none;">
                 <h3>フィードの追加</h3>
@@ -397,7 +397,7 @@
     </div>
     <script>
         // グローバル変数
-        let currentToken = "vpMmY6Q5ZuAVtr0k8JMLoFCkD0QjrPURfUnZs88t4kk";
+        let currentToken = "";
         let currentFeedId = null;
         let currentSummaryElement = null;
         let currentArticleIndex = -1;
